--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -213,19 +213,19 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons platform=server tools=yes target=debug debug_symbols=yes goost_core_enabled=no
+          scons platform=server tools=yes target=debug debug_symbols=yes tests=yes use_asan=yes goost_core_enabled=no
 
       - name: Compilation (goost_editor_enabled=no)
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons platform=server tools=yes target=debug debug_symbols=yes goost_editor_enabled=no
+          scons platform=server tools=yes target=debug debug_symbols=yes tests=yes use_asan=yes goost_editor_enabled=no
 
       - name: Compilation (goost_scene_enabled=no)
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons platform=server tools=yes target=debug debug_symbols=yes goost_scene_enabled=no
+          scons platform=server tools=yes target=debug debug_symbols=yes tests=yes use_asan=yes goost_scene_enabled=no
 
       # Should be run last, must run all unit tests afterwards.
       - name: Compilation (goost_components_enabled=yes)
