--- a/.github/workflows/ios_builds.yml
+++ b/.github/workflows/ios_builds.yml
@@ -5,10 +5,10 @@ on:
       - '*'
   push:
     branches:
-      - 'gd3'
+      - '1.2-gd3'
 
 env:
-  GOOST_BASE_BRANCH: gd3
+  GOOST_BASE_BRANCH: 1.2-gd3
   SCONSFLAGS: godot_modules_enabled=no verbose=yes warnings=all werror=yes debug_symbols=no --jobs=4
   SCONS_CACHE_LIMIT: 8192
 
